# cpp-editor

./: .clang-format  .gitignore  .gitmessage  CLAUDE.md  CMakeLists.txt  basic_test.cpp  compile_commands.json  main.cpp
docs/: architecture.md  coding-rules.md  handoff-syntactic-highlighter.md  syntactic-highlighter-plan.html
docs/api/: entities.md
docs/backlog/: README.md  code-action.md  completion.md  formatting.md  rename.md  signature-help.md
docs/plans/: 2026-05-17-001-feat-syntactic-highlighter-plan.md
src/: main.cpp
src/adapters/: InputAdapter.hpp  InputTranslator.hpp
src/adapters/lsp/: ClangdProcess.cpp  ClangdProcess.hpp  LspConstants.hpp  LspDecoder.hpp  LspEncoder.hpp  LspMessage.hpp
src/core/entities/: Buffer.hpp  Cursor.hpp  Diagnostic.hpp  Document.hpp  EditorConfig.hpp  Position.hpp
src/core/interfaces/: Command.hpp  Key.hpp
src/core/usecases/: EditorCommands.hpp  EditorMode.hpp  FileService.hpp  InputDispatcher.hpp  LspService.cpp  LspService.hpp
src/drivers/: EditorApp.cpp  EditorApp.hpp  FtxuiRenderer.cpp  FtxuiRenderer.hpp  ScreenFormat.hpp  SyntaxHighlighter.hpp
tests/e2e/: EditorScreenFormat.hpp  PtyHarness.cpp  PtyHarness.hpp  test_editor_e2e.cpp
tests/unit/: test_Buffer.cpp  test_Cursor.cpp  test_Document.cpp  test_EditorCommands.cpp  test_FileService.cpp  test_InputTranslator.cpp  test_LspJsonRpc.cpp  test_LspService.cpp  test_Position.cpp  test_SyntaxHighlighter.cpp
